affiliate section issues fix

--- a/affiliate/templates/affiliate-leadoverview.html
+++ b/affiliate/templates/affiliate-leadoverview.html
@@ -76,7 +76,7 @@
 
                         <br>
                         <div class="form-group">
-                            <a class="btn btn-primary" href="/affiliate/enternewleads">Create A New
+                            <a class="btn btn-primary" href="{% url 'affiliate:add_new_lead' %}">Create A New
                                 Lead</a>
                         </div>
 
