--- a/affiliate/templates/affiliate-enternewleads.html
+++ b/affiliate/templates/affiliate-enternewleads.html
@@ -56,22 +56,11 @@
 
             <div class="row">
             <div style="margin: 0 auto 100px auto; width: 400px">
-            <form action="/affiliate/enternewleads" accept-charset="UTF-8"
-                  method="post">{% csrf_token %}
+            <form action="." accept-charset="UTF-8"
+                  method="post">
+                  {% csrf_token %}
+                  {{ form }}
 
-                <br>
-                <h4>First Name</h4>
-                <input type="text" name="firstname" id="newlead_firstname"/>
-                <br>
-                <h4>Last Name</h4>
-                <input type="text" name="lastname" id="newlead_lastname"/>
-                <br>
-                <h4>Business Name</h4>
-                <input type="text" name="businessname" id="newlead_businessname"/>
-                <br>
-                <h4>Business Package</h4>
-                <input type="text" name="businesspackage" id="newlead_businesspackage"/>
-                <br>
                 <div style="display: flex; justify-content: space-around">
                     <button type="submit" name="commit" value="Create Newlead" class="btn btn-primary"
                             data-disable-with="Create Newlead">Create Newlead
