--- a/business/templates/home/my_progress.html
+++ b/business/templates/home/my_progress.html
@@ -75,19 +75,23 @@
         <div class="card">
           <div class="card-body">
             <p>Apply For Loans</p>
-            <a class="btn btn-primary" href="{% url 'loanportal:loanapplication'%}" target="_blank">Click Here To Login To Your <br>Portal To Apply For Loans</a>
+            <a class="btn btn-primary" href="{% url 'loanportal:loanapplication'%}" target="_blank">Click Here To Login To Your Portal To Apply For Loans</a>
           </div>
         </div>
         <div class="card">
           <div class="card-body">
             <p>Go To Marketing Couse</p>
-            <a class="btn btn-primary" href="{% url 'marketingcourse:mainfile'%}" target="_blank">Click Here To Login To Your <br>Portal To See Your Credit Repair Progress.</a>
+            <a class="btn btn-primary" href="{% url 'marketingcourse:mainfile'%}" target="_blank">
+              Click Here To Go To Marketing Course
+            </a>
           </div>
         </div>
         <div class="card">
           <div class="card-body">
             <p>Go To Business Credit Building Course</p>
-            <a class="btn btn-primary" href="{% url 'businesscreditcourse:home'%}" target="_blank">Click Here To Login To Your <br>Portal To See Your Credit Repair Progress.</a>
+            <a class="btn btn-primary" href="{% url 'businesscreditcourse:home'%}" target="_blank">
+              Click Here To Go To The Business Credit Building Course
+            </a>
           </div>
         </div>
       </div>
