--- a/business/templates/home/virtualcard.html
+++ b/business/templates/home/virtualcard.html
@@ -1,32 +1,42 @@
+{% extends "base.html" %}
 
-<div class="row page-header"><div class="col-lg-6 align-self-center ">
-<h2>Virtual Card Access</h2></div></div>
+{% block extrastyle %}
+    
+{% endblock extrastyle %}
 
+{% block content %}
+<div class="row page-header">
+    <div class="col-lg-6 align-self-center ">
+        <h2>Virtual Card</h2>
+    </div>
+</div>
 <section class="main-content">
 
-<div class="row">
-  <div class="col-md-12">
-    <iframe width="100%" height="515" src="https://www.youtube.com/embed/m60ioLBmneI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div>
-</div>
-<style media="screen">
-.card-body {
-text-align: center;
-
-}
-</style>
-
-<div class="row">
+    <div class="row">
         <div class="col-md-12">
-          <div class="card-body">
-
-        <h2>Virtual Cards Are To Be Used For Domain & Email Purchases One Time Use</h2>
-        <h3>Watch The Video Above & Login To Your Portal & Access Your Virtual Card</h3>
-        <br><br>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/iframe-resizer/3.5.14/iframeResizer.min.js"></script><iframe src="https://hello.dubsado.com:443/public/client/portal/5df3872c85558e3a6224224b?iframe=true" frameBorder="0" width="100%" height="750"></iframe><script type="text/javascript">setTimeout(function(){iFrameResize({checkOrigin: false});},30);</script>
+            <iframe width="100%" height="515" src="https://www.youtube.com/embed/Dw_4bMU1-ts" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
         </div>
-          </div>
+    </div>
+    <br>
+    <br>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card">
+                <img src="https://www.seb.ee/sites/default/files/styles/product_detail_thumb/public/field/image/product/virtuaalkaart_4.png?itok=-Vz70k2S" class="card-img-top" width="100%" height="250px">
+                <div class="card-body">
+
+                    <h5 class="card-title">Card Number: {{ virtual_card.card_number }}</h5>
+                    <h5 class="card-title">MM/YY: {{ virtual_card.mm_yy }}</h5>
+                    <h5 class="card-title">CVC: {{ virtual_card.cvc }}</h5>
+                    <h5 class="card-title">Zip Code: {{ virtual_card.zip_code }}</h5>
+                </div>
+            </div>
         </div>
-
-
+    </div>
 </section>
+{% endblock content %}
+
+
+{% block javascriptblock %}
+  
+{% endblock javascriptblock %}
