--- a/getdinerotoday/templates/base.html
+++ b/getdinerotoday/templates/base.html
@@ -112,6 +112,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <li class="nav-item">
                     <a href="/" class="nav-link"><span class="toggle-none">Dashboard</span></a>
                   </li>
+                  {% if request.user.profile.virtual_access_card_paid %}
+                  <li class="nav-item">
+                    <a href="{% url 'business:virtual_card' %}" class="nav-link"><span class="toggle-none">Virtual Card Access</span></a>
+                  </li>                                      
+                  {% endif %}
                   <li class="nav-item">
                     <a href="{% url 'business:upgrade' %}" class="nav-link">Upgrade to Full Business Builder Program with No Money Down</a>
                   </li>
