--- a/portals/insurance_agent/templates/base-insuranceagent.html
+++ b/portals/insurance_agent/templates/base-insuranceagent.html
@@ -224,11 +224,11 @@
                 {#                  </li>#}
                 <li class="nav-item"><a href="/" class="nav-link">Go Back To Main Portal</a></li>
                 <li class="nav-item">
-                    <a href="/restaurant_catering" class="nav-link"><span
+                    <a href="/insurance_agent" class="nav-link"><span
                             class="toggle-none">{{ request.resolver_match.app_name }} Dashboard</span></a>
                 </li>
                 <li class="nav-item">
-                    <a href="/restaurant_catering/upgrade" class="nav-link">Upgrade to Full Business
+                    <a href="/insurance_agent/upgrade" class="nav-link">Upgrade to Full Business
                         Builder Program with No Money Down
                     </a>
                 </li>
@@ -237,68 +237,68 @@
                        class="nav-link"> Watch Webinar On Building Business Credit </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/restaurant_catering/financing" class="nav-link"> Create
+                    <a href="/insurance_agent/financing" class="nav-link"> Create
                         My {{ request.resolver_match.app_name }} Business Financing Plan </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/restaurant_catering/business-credit-plan" class="nav-link"> Create
+                    <a href="/insurance_agent/business-credit-plan" class="nav-link"> Create
                         My {{ request.resolver_match.app_name }} Business Credit Building Plan </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/restaurant_catering/credit-situation" class="nav-link"> Create My Credit
+                    <a href="/insurance_agent/credit-situation" class="nav-link"> Create My Credit
                         Repair Plan </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="javascript: void(0);" aria-expanded="false"><span class="toggle-none">Business Credit Building <span
                             class="fa arrow"></span></span></a>
                     <ul class="nav-second-level nav flex-column " aria-expanded="false">
-                        <li class="nav-item"><a href="/restaurant_catering/business-entity"
+                        <li class="nav-item"><a href="/insurance_agent/business-entity"
                                                 class="nav-link">Business Entity</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/ein" class="nav-link">EIN
+                        <li class="nav-item"><a href="/insurance_agent/ein" class="nav-link">EIN
                             Number</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/business-license"
+                        <li class="nav-item"><a href="/insurance_agent/business-license"
                                                 class="nav-link">Business License</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/website-creation-options"
+                        <li class="nav-item"><a href="/insurance_agent/website-creation-options"
                                                 class="nav-link">Website Creation</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/fax-number-options"
+                        <li class="nav-item"><a href="/insurance_agent/fax-number-options"
                                                 class="nav-link">Fax Number</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/four-eleven"
+                        <li class="nav-item"><a href="/insurance_agent/four-eleven"
                                                 class="nav-link">411 Listings</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/professional-email"
+                        <li class="nav-item"><a href="/insurance_agent/professional-email"
                                                 class="nav-link">Professional Email Address</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/domain" class="nav-link">Domain</a>
+                        <li class="nav-item"><a href="/insurance_agent/domain" class="nav-link">Domain</a>
                         </li>
-                        <li class="nav-item"><a href="/restaurant_catering/toll-free-options"
+                        <li class="nav-item"><a href="/insurance_agent/toll-free-options"
                                                 class="nav-link">Toll Free Number</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/virtual-address"
+                        <li class="nav-item"><a href="/insurance_agent/virtual-address"
                                                 class="nav-link">Virtual Address</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/business-bank-account"
+                        <li class="nav-item"><a href="/insurance_agent/business-bank-account"
                                                 class="nav-link">Business Bank Account</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/merchant-account"
+                        <li class="nav-item"><a href="/insurance_agent/merchant-account"
                                                 class="nav-link">Merchant Account</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/duns" class="nav-link">Duns
+                        <li class="nav-item"><a href="/insurance_agent/duns" class="nav-link">Duns
                             Number</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/sic" class="nav-link">SIC &
+                        <li class="nav-item"><a href="/insurance_agent/sic" class="nav-link">SIC &
                             NAISC Codes</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/business-good-standing"
+                        <li class="nav-item"><a href="/insurance_agent/business-good-standing"
                                                 class="nav-link">Checking If Your Business Is In Good Standing </a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/business-in-good-standing"
+                        <li class="nav-item"><a href="/insurance_agent/business-in-good-standing"
                                                 class="nav-link">How To Get Your Business Back In Good Standing</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a href="/restaurant_catering/business-credit-step" class="nav-link"> Choose
+                    <a href="/insurance_agent/business-credit-step" class="nav-link"> Choose
                         Business Credit Building Steps You Need Done For You </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span class="toggle-none"> Business Credit Bureaus To Become Established With  <span
                             class="fa arrow"></span></span></a>
                     <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
-                        <li class="nav-item"><a href="/restaurant_catering/experian" class="nav-link">
+                        <li class="nav-item"><a href="/insurance_agent/experian" class="nav-link">
                             Experian Business </a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/dunn-brad"
+                        <li class="nav-item"><a href="/insurance_agent/dunn-brad"
                                                 class="nav-link"> Dunn & Bradsheet </a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/equifax" class="nav-link">
+                        <li class="nav-item"><a href="/insurance_agent/equifax" class="nav-link">
                             Equifax Business </a></li>
                     </ul>
                 </li>
@@ -306,13 +306,13 @@
                     <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span class="toggle-none">Corporate Credit List<span
                             class="fa arrow"></span></span></a>
                     <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
-                        <li class="nav-item"><a href="/restaurant_catering/vendor-list"
+                        <li class="nav-item"><a href="/insurance_agent/vendor-list"
                                                 class="nav-link">Starter Vendor List</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/store-credit-vendor-list"
+                        <li class="nav-item"><a href="/insurance_agent/store-credit-vendor-list"
                                                 class="nav-link">Store Credit Vendor List</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/business-credit-vendor"
+                        <li class="nav-item"><a href="/insurance_agent/business-credit-vendor"
                                                 class="nav-link">Revolving Business Credit Vendor List</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/cc-credit-vendor"
+                        <li class="nav-item"><a href="/insurance_agent/cc-credit-vendor"
                                                 class="nav-link">Credit Card No Personal Gaurantee Vendor List</a></li>
                     </ul>
                 </li>
@@ -321,32 +321,32 @@
                     <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span class="toggle-none">Full List Of Financing Products<span
                             class="fa arrow"></span></span></a>
                     <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
-                        <li class="nav-item"><a href="/restaurant_catering/personal-credit-card"
+                        <li class="nav-item"><a href="/insurance_agent/personal-credit-card"
                                                 class="nav-link">Personal Credit Cards</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/business-credit-card"
+                        <li class="nav-item"><a href="/insurance_agent/business-credit-card"
                                                 class="nav-link">Business Credit Cards</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/short-term-loan"
+                        <li class="nav-item"><a href="/insurance_agent/short-term-loan"
                                                 class="nav-link">Short Term Loans</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/business-term-loan"
+                        <li class="nav-item"><a href="/insurance_agent/business-term-loan"
                                                 class="nav-link">Business Term Loans</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/small-business-loan"
+                        <li class="nav-item"><a href="/insurance_agent/small-business-loan"
                                                 class="nav-link">Small Business Adminstration Loans</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/personal-loan"
+                        <li class="nav-item"><a href="/insurance_agent/personal-loan"
                                                 class="nav-link">Personal Loans</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/business-line-credit"
+                        <li class="nav-item"><a href="/insurance_agent/business-line-credit"
                                                 class="nav-link">Business Lines Of Credit</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/nocredit-financings"
+                        <li class="nav-item"><a href="/insurance_agent/nocredit-financings"
                                                 class="nav-link">No Credit Check Loans</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/invoice-factoring"
+                        <li class="nav-item"><a href="/insurance_agent/invoice-factoring"
                                                 class="nav-link">Invoice Factoring</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/invoice-financings"
+                        <li class="nav-item"><a href="/insurance_agent/invoice-financings"
                                                 class="nav-link">Invoice Financing</a></li>
-                        <li class="nav-item"><a href="/restaurant_catering/equipment-financings"
+                        <li class="nav-item"><a href="/insurance_agent/equipment-financings"
                                                 class="nav-link">Equipment Financing</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a href="/restaurant_catering/marketing-business" class="nav-link"> Marketing
+                    <a href="/insurance_agent/marketing-business" class="nav-link"> Marketing
                         Your {{ request.resolver_match.app_name }} Business </a>
                 </li>
                 <li class="nav-item">
@@ -354,38 +354,38 @@
                         Course </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/restaurant_catering/customer-financing-offer" class="nav-link"> Offering
+                    <a href="/insurance_agent/customer-financing-offer" class="nav-link"> Offering
                         Financing To Your {{ request.resolver_match.app_name }} Business Customers </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/restaurant_catering/apply-loans" class="nav-link"> Apply For The
+                    <a href="/insurance_agent/apply-loans" class="nav-link"> Apply For The
                         Best {{ request.resolver_match.app_name }} Business Loans </a>
                 </li>
                 <!-- <li class="nav-item">
-                      <a href="/restaurant_catering/credit-repair-options" class="nav-link"> Sign Up For Credit Repair </a>
+                      <a href="/insurance_agent/credit-repair-options" class="nav-link"> Sign Up For Credit Repair </a>
                     </li>-->
                 <li class="nav-item">
-                    <a href="/restaurant_catering/credit-trade-lines" class="nav-link"> Personal
+                    <a href="/insurance_agent/credit-trade-lines" class="nav-link"> Personal
                         Credit Primary Tradelines </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/restaurant_catering/business-credit-repair-new" class="nav-link">
+                    <a href="/insurance_agent/business-credit-repair-new" class="nav-link">
                         Business Credit Repair </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/restaurant_catering/business-credit-monitoring" class="nav-link"> Sign
+                    <a href="/insurance_agent/business-credit-monitoring" class="nav-link"> Sign
                         Up For Business Credit Monitoring </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/restaurant_catering/business-credit-strategy" class="nav-link"> 0%
+                    <a href="/insurance_agent/business-credit-strategy" class="nav-link"> 0%
                         Business Credit Card Strategy </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/restaurant_catering/refer" class="nav-link"> Make Extra Money Referring
+                    <a href="/insurance_agent/refer" class="nav-link"> Make Extra Money Referring
                         Friends! </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/restaurant_catering/insurance-products" class="nav-link"> Insurance
+                    <a href="/insurance_agent/insurance-products" class="nav-link"> Insurance
                         Products </a>
                 </li>
             </ul>
