--- a/getdinerotoday/templates/portalNav.html
+++ b/getdinerotoday/templates/portalNav.html
@@ -24,7 +24,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link rel="stylesheet" type="text/css" href='{% static "lib/toast/jquery.toast.min.css" %}'>
     <link rel="stylesheet" type="text/css" href='{% static "style.css" %}'>
     <link rel="stylesheet" type="text/css" href='{% static "lib/jquery-ui/jquery-ui.css" %}'>
-
+    <style>
+      body.nav-collapsed .main-sidebar-nav.dark-navigation{
+        display: none !important;
+      }
+      body.nav-collapsed .admin-logo {
+        display: none !important;
+      }
+      body.nav-collapsed .main-content {
+          margin-left: 20px;
+      }
+    </style>
     {% block extrastyle %}
 
     {% endblock extrastyle %}
