--- a/businesscreditcourse/templates/twelve.html
+++ b/businesscreditcourse/templates/twelve.html
@@ -1,4 +1,4 @@
-{% extends "base-creditcourse.html" %}
+{% extends "base-businesscreditcourse.html" %}
 {% load static %}
 
 {% block extrastyle %}
@@ -19,14 +19,14 @@
 
 <div class="row page-header">
    <div class="col-lg-6 align-self-center ">
-      <h2> Select the Entity Structure of Your Business</h2>
+      <h2>Obtain a Federal Employer Identification Number (EIN)</h2>
    </div>
 </div>
 <section class="main-content">
    <div class="row">
       <div class="col-md-12">
          <div class="card-body">
-          <center> <h3>Set up a business entity or make sure your existing entity is set up correctly. It’s best to build business credit with an LLC or Corporation (S or C Corporation). Creditors, Suppliers, Lenders, etc. prefer to see an actual business entity. In addition, a corporation or an LLC is treated as a separate legal entity which separates you personally from the liability of operating your business. Be sure to compare each entity so you can see the difference between the most common entities.</h3> </center>
+          <center> <h3>To build business credit your business must have a Federal Tax Identification Number (EIN). To obtain an EIN, or to determine if you need a new one go to irs.gov and do it yourself or simply have a professional incorporation service provider do it for you.</h3> </center>
       </div>
    </div>
 </section>
